# Gaoland-s-Adventures

./: Animation.cpp  Animation.h  ArtTheme.cpp  ArtTheme.h  BadCar.cpp  BadCar.h  Button.cpp  Button.h  CMakeLists.txt  Car.cpp  Car.h  Game.cpp  Game.h  Introduction.cpp  Introduction.h  LuckyCoin.cpp  LuckyCoin.h  MarioKart.cpp  MarioKart.h  Menu.cpp  Menu.h  MenuScreen.cpp  MenuScreen.h  MysteryBoxes.cpp  MysteryBoxes.h  Nivel1.cpp  Nivel1.h  Nivel2M1.cpp  Nivel2M1.h  Nivel2M2.h  Nivel2M3.cpp  Nivel2M3.h  Nivel3.cpp  Nivel3.h  Nivel4.cpp  Nivel4.h  Options.cpp  Options.h  Player.cpp  Player.h  (+20 more)
Assets/img/nivel2/: plantillapreguntas.psd
Assets/img/nivel2/m1/: plantilla carta.psd
Assets/img/nivel2/m3/: plantilla.psd
Assets/img/nivel3/: barravida.psd  mariostatic.psd
Assets/img/nivel4/: flecha.psd
Assets/img/titles/: mainMenuTitle.rar
include/SFML/Audio/: OutputSoundFile.hpp
source/: Blocks.cpp  GameEngine.cpp  GameEngine.h  Geometry.cpp  Pickups.cpp  SuperMarioGame.cpp  SuperMarioGame.h  TileMap.h  main.cpp
x64/Debug/: gaoland'sAdventure.exe.recipe  gaoland'sAdventure.ilk  gaoland'sAdventure.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/gaoland'.fad3803a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gaoland'sAdventure.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: gaoland'sAdventure.exe.recipe  gaoland'sAdventure.iobj  gaoland'sAdventure.ipdb  gaoland'sAdventure.vcxproj.FileListAbsolute.txt
x64/Release/gaoland'.fad3803a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gaoland'sAdventure.lastbuildstate  gaoland'sAdventure.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
